syntax = "proto3";
package pb;
option go_package = "github.com/Filtronic/Minio/gapi/pb";


message FileContent {
  bytes content = 1;
  string content_type = 2;
}
